Main and AppBuilder conflicts fixed, and add checkstyle